# MGDP

./: .gitignore  README.md  index.html
legged_gym/: README.md  requirement-gpu.txt  setup.py
legged_gym/legged_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
legged_gym/legged_gym/envs/baseline/: legged_robot_camera.py  legged_robot_config_baseline.py  legged_robot_rewards.py  legged_robot_terrains.py
legged_gym/legged_gym/envs/random_dog/: random_dog_config_stage1.py  random_dog_config_stage2.py
legged_gym/legged_gym/scripts/: play_joy_45_gap.py  play_random_dog.py  play_stage1.py  play_stage2.py  simple_env.py  train.py
legged_gym/legged_gym/utils/: __init__.py  helpers.py  logger.py  math.py  task_registry.py  terrain.py
legged_gym/rl/utils/: utils.py
legged_gym/scripts/: play_terrain.py  resume.py  train.py  train_stage2.py  vis_stage1.py  vis_stage2.py
static/css/: index.css
warp_sensor/: .gitignore  README.md  pyproject.toml
warp_sensor/gviz/: __init__.py  g_basic.py  g_message.py  g_thread.py  gviz_ui.py  test_client.py  test_msg.py  test_sever.py
warp_sensor/gviz/urdf/: go1.urdf
warp_sensor/gviz/urdf/go1/meshes/: calf.dae  compressed_trunk.dae  hip.dae  thigh.dae  thigh_mirror.dae
warp_sensor/gviz/utils/: g_urdf.py  mesh_compress.py
warp_sensor/warp_sensor/: __init__.py  warp_utils.py
warp_sensor/warp_sensor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+38 files in other folders)
